Fix header spacing in actual lessons

--- a/_sass/pages/_lessons.scss
+++ b/_sass/pages/_lessons.scss
@@ -3,6 +3,7 @@
     margin-bottom: 15px;
 
     h1 {
+        margin-bottom: 15px;
         margin-top: 0;
     }
 
